[gd_scene load_steps=11 format=2]

[ext_resource path="res://dataFiles/Scripts/DisplayManager.gd" type="Script" id=1]
[ext_resource path="res://dataFiles/Font/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/pyFiles/panel.py" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.0196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.0352941, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.00784314, 0.356863, 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.00392157, 0.180392, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.141176, 0, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0672947, 0.00138474, 0.128906, 1 )

[node name="DisplayManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0
rect_min_size = Vector2( 400, 0 )
custom_styles/panel = SubResource( 2 )

[node name="Panel3" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = 167.0
margin_right = 150.0
margin_bottom = -33.0
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="userName" type="LineEdit" parent="Panel3/VBoxContainer"]
margin_right = 300.0
margin_bottom = 28.0
custom_colors/cursor_color = Color( 0.647059, 0.258824, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
placeholder_text = "User Name:"
caret_blink = true

[node name="userPassword" type="LineEdit" parent="Panel3/VBoxContainer"]
margin_top = 32.0
margin_right = 300.0
margin_bottom = 60.0
custom_colors/cursor_color = Color( 0.647059, 0.258824, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true
placeholder_text = "User Password:"
caret_blink = true

[node name="debug" type="TextEdit" parent="Panel3/VBoxContainer"]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 400.0
size_flags_vertical = 3
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 7 )
readonly = true
